Fix search bar on mobile

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8,7 +8,7 @@
   --nav-active-hover-color: #D9D9D9;
   --nav-active-color: #E5E5E5;
   --background-btn-color: #F0F0F0;
-  --border-color: #d3d3d3;
+  --border-color: #ccc;
   --search-box-height: 29px;
   --header-height: 56px;
   --margin-lr-container: 28px;
@@ -19,6 +19,7 @@
   --active-text-color: #030303;
   --btn-search-hover: #e9e9e9;
   --side-bar-item-line-break-color: rgba(0, 0, 0, 0.1);
+  --search-bar-input-color: #fff;
 }
 
 * {
@@ -60,6 +61,8 @@ body {
   --nav-active-hover-color: #4D4D4D;
   --active-text-color: #fff;
   --side-bar-item-line-break-color: rgba(255, 255, 255, 0.1);
+  --search-bar-input-color: #121212;
+  --border-color: #303030;
 }
 .dark-mode .react-icons {
   color: white;
